--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "office-to-pdf": "^4.0.0"
+    "imagemagick": "^0.1.3",
+    "office-to-pdf": "^4.0.0",
+    "temporary": "0.0.8"
   }
 }
